change credit font

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
 
     <div class="footer-credit">
-      <p class="credit-text">Pakorn Sukmankong</p>
+      <p class="credit-text">PAKORN SUKMANKONG</p>
     </div>
 
     <script src="./scripts/app.js"></script>
